--- a/Rapport1/Rapport1.Rmd
+++ b/Rapport1/Rapport1.Rmd
@@ -55,19 +55,19 @@ Résultats {#Résultats .unnumbered}
 ------
 La largeur, la profondeur et la vitesse du courant de la rivière liée à l'abondance totale du benthos, ont montré, respectivement un coefficient de corrélation non significatif de -0,026, 0.048 et 0.011, nous empêchant donc d’émettre des conclusions entre ces paramètres et l’abondance du benthos. Toutefois, la température de l'eau des rivières montre une corrélation significative légèrement positive (0.073), suggérant une influence minime de ce paramètre sur l'abondance totale du benthos. Il est intéressant de constater que des corrélations positives significatives sont observées entre la profondeur et la largeur des rivières (0.219), la largeur des rivières et la température de l'eau (0.290), indiquant que les rivières plus larges et plus profondes peuvent avoir des températures plus élevées. Mais aussi entre la température de l’eau et la vitesse du courant des rivières (0,332) et entre la profondeur et la vitesse du courant des rivières (0,442).
 
-La figure 2 suggère qu'il y a des variations dans l'abondance des organismes benthiques entre les différentes classes de transparence. Sur une échelle logarithmique, l'abondance tend à être plus élevée dans les cours d'eau à transparence élevée et moyenne qu'à transparence faible, mais avec une étendue des données notables pour la classe « élevée ». Nous avons donc fait un test de Tukey, qui a révélé uniquement une différence significative dans l’abondance totale entre les groupes de transparence moyenne et faible.
+La figure \ref{fig:plot2} suggère qu'il y a des variations dans l'abondance des organismes benthiques entre les différentes classes de transparence. Sur une échelle logarithmique, l'abondance tend à être plus élevée dans les cours d'eau à transparence élevée et moyenne qu'à transparence faible, mais avec une étendue des données notables pour la classe « élevée ». Nous avons donc fait un test de Tukey, qui a révélé uniquement une différence significative dans l’abondance totale entre les groupes de transparence moyenne et faible.
 
-La figure 3 illustré ci-dessus présente une régression linéaire (ligne bleue) entre la vitesse moyenne du courant (m/s) et la température moyenne de l'eau (°C). Celle-ci montre une relation significative entre les deux attributs (p-value = 3,064 x 10-11***) ainsi qu’un R2 de 0,5216. Une telle relation est couramment exploitée en écologie et hydrologie pour évaluer les répercussions de la température sur les systèmes aquatiques @sinokrot_-stream_2000. L'intervalle de confiance (bande grise) entourant la ligne de régression indique la fiabilité des prédictions obtenues pour divers degrés de température.
+La figure \ref{fig:plot3} illustré ci-dessus présente une régression linéaire (ligne bleue) entre la vitesse moyenne du courant (m/s) et la température moyenne de l'eau (°C). Celle-ci montre une relation significative entre les deux attributs (p-value = 3,064 x 10-11***) ainsi qu’un R2 de 0,5216. Une telle relation est couramment exploitée en écologie et hydrologie pour évaluer les répercussions de la température sur les systèmes aquatiques @sinokrot_-stream_2000. L'intervalle de confiance (bande grise) entourant la ligne de régression indique la fiabilité des prédictions obtenues pour divers degrés de température.
 
 ![Corrélation entre paramètres physiques des rivières et abondance des macro-invertébrés benthiques, avec diagrammes de dispersion et densité. \label{fig:plot1}]("C:/Users/ALEXIS/OneDrive/Bureau/Atelier2_ AlexisGabJust/projet-gab-alex-just/figure_3.png"){width=50% height=26%}
 
-![Relation entre la vitesse moyenne du courant et la température moyenne du cours d'eau avec la position des taxons associés. \label{fig:plot1}]("C:/Users/ALEXIS/OneDrive/Bureau/Atelier2_ AlexisGabJust/projet-gab-alex-just/figure_1.png"){width=50% height=26%}
+![Relation entre la vitesse moyenne du courant et la température moyenne du cours d'eau avec la position des taxons associés. \label{fig:plot3}]("C:/Users/ALEXIS/OneDrive/Bureau/Atelier2_ AlexisGabJust/projet-gab-alex-just/figure_1.png"){width=51% height=26%}
 
-![Relation entre la transparence de l'eau (élevée, moyenne et faible) et l'abondance totale des organismes benthiques . \label{fig:plot1}]("C:/Users/ALEXIS/OneDrive/Bureau/Atelier2_ AlexisGabJust/projet-gab-alex-just/figure_2.png"){width=50% height=26%}
+![Relation entre la transparence de l'eau (élevée, moyenne et faible) et l'abondance totale des organismes benthiques . \label{fig:plot2}]("C:/Users/ALEXIS/OneDrive/Bureau/Atelier2_ AlexisGabJust/projet-gab-alex-just/figure_2.png"){width=50% height=26%}
 
 Discussion {#Discussion .unnumbered}
 ------
-La matrice de corrélation présentée à la figure 1 fournit une vue d'ensemble des relations potentielles entre les paramètres physiques des rivières soit la profondeur (m), la largeur (m), la vitesse du courant (m/s) et la température de l’eau (°C). Nous souhaitions observer des corrélations entre ces différentes caractéristiques et l'abondance totale des organismes benthiques. Les corrélations significatives dans la figure 1 sont en accord avec les résultats retrouvés dans la littérature scientifique. En effet, des études antérieures montrent souvent une corrélation positive entre l’abondance du benthos et la température de l’eau qui peut affecter leur métabolisme, leur taux de croissance ainsi que leur reproduction [@lenat_effects_1994;@paul_streams_2001]. Ces résultats nous montrent que, bien que certaines relations entre les caractéristiques physiques des rivières et l'abondance benthique ne soient pas significatives, d'autres, telles que la température de l'eau, peuvent avoir un impact, bien que faible, sur l’abondance du benthos dans les rivières. Il est important de comprendre que ces corrélations n'impliquent pas nécessairement une relation de cause à effet et que des analyses plus approfondies seraient nécessaires pour démystifier les interactions complexes au sein de ces écosystèmes aquatiques. 
+La matrice de corrélation présentée à la figure 1 fournit une vue d'ensemble des relations potentielles entre les paramètres physiques des rivières soit la profondeur (m), la largeur (m), la vitesse du courant (m/s) et la température de l’eau (°C). Nous souhaitions observer des corrélations entre ces différentes caractéristiques et l'abondance totale des organismes benthiques. Les corrélations significatives dans la figure \ref{fig:plot1} sont en accord avec les résultats retrouvés dans la littérature scientifique. En effet, des études antérieures montrent souvent une corrélation positive entre l’abondance du benthos et la température de l’eau qui peut affecter leur métabolisme, leur taux de croissance ainsi que leur reproduction [@lenat_effects_1994;@paul_streams_2001]. Ces résultats nous montrent que, bien que certaines relations entre les caractéristiques physiques des rivières et l'abondance benthique ne soient pas significatives, d'autres, telles que la température de l'eau, peuvent avoir un impact, bien que faible, sur l’abondance du benthos dans les rivières. Il est important de comprendre que ces corrélations n'impliquent pas nécessairement une relation de cause à effet et que des analyses plus approfondies seraient nécessaires pour démystifier les interactions complexes au sein de ces écosystèmes aquatiques. 
 
 L'interprétation écologique de la figure 2 lie la transparence de l'eau, indice de sa qualité, à l'abondance du benthos. Une eau claire, indiquant peu de particules en suspension, laisse pénétrer davantage de lumière, stimulant la photosynthèse et la productivité primaire, bénéficiant ainsi à la chaîne alimentaire disponible pour les organismes benthiques. À l'inverse, une eau trouble, avec une faible transparence due à une turbidité élevée, limite l'exposition à la lumière et peut réduire la disponibilité alimentaire pour le benthos. La présence de variations significatives dans les données suggère l'influence d'autres facteurs environnementaux, indiquant des interactions écologiques complexes influençant les organismes benthiques. Les écarts importants et valeurs aberrantes dans les données nécessitent une exploration plus approfondie, et des analyses statistiques supplémentaires pourraient clarifier les mécanismes sous-jacents. Les avis scientifiques divergent ; l'étude de Lunt et Smee révèle que la turbidité peut favoriser une plus grande abondance benthique en offrant un refuge contre les prédateurs @lunt_turbidity_2020. Tandis que Norton note que la prédation est plus élevée dans les eaux claires, réduisant ainsi l'abondance benthique @norton_crystal_2023. Cependant, l’étude de Bigham a eu du mal à démontrer des liens significatifs entre la turbidité et les communautés benthiques en raison de réponses variables entre différentes familles, soulignant le besoin de recherches futures pour des conclusions définitives @bigham_review_2021.
 
