--- a/Rapport1/Rapport1.tex
+++ b/Rapport1/Rapport1.tex
@@ -189,22 +189,22 @@ peuvent avoir des températures plus élevées. Mais aussi entre la
 température de l'eau et la vitesse du courant des rivières (0,332) et
 entre la profondeur et la vitesse du courant des rivières (0,442).
 
-La figure 2 suggère qu'il y a des variations dans l'abondance des
-organismes benthiques entre les différentes classes de transparence. Sur
-une échelle logarithmique, l'abondance tend à être plus élevée dans les
-cours d'eau à transparence élevée et moyenne qu'à transparence faible,
-mais avec une étendue des données notables pour la classe « élevée ».
-Nous avons donc fait un test de Tukey, qui a révélé uniquement une
-différence significative dans l'abondance totale entre les groupes de
-transparence moyenne et faible.
+La figure \ref{fig:plot2} suggère qu'il y a des variations dans
+l'abondance des organismes benthiques entre les différentes classes de
+transparence. Sur une échelle logarithmique, l'abondance tend à être
+plus élevée dans les cours d'eau à transparence élevée et moyenne qu'à
+transparence faible, mais avec une étendue des données notables pour la
+classe « élevée ». Nous avons donc fait un test de Tukey, qui a révélé
+uniquement une différence significative dans l'abondance totale entre
+les groupes de transparence moyenne et faible.
 
-La figure 3 illustré ci-dessus présente une régression linéaire (ligne
-bleue) entre la vitesse moyenne du courant (m/s) et la température
-moyenne de l'eau (°C). Celle-ci montre une relation significative entre
-les deux attributs (p-value = 3,064 x 10-11***) ainsi qu'un R2 de
-0,5216. Une telle relation est couramment exploitée en écologie et
-hydrologie pour évaluer les répercussions de la température sur les
-systèmes aquatiques (1). L'intervalle de confiance (bande grise)
+La figure \ref{fig:plot3} illustré ci-dessus présente une régression
+linéaire (ligne bleue) entre la vitesse moyenne du courant (m/s) et la
+température moyenne de l'eau (°C). Celle-ci montre une relation
+significative entre les deux attributs (p-value = 3,064 x 10-11***)
+ainsi qu'un R2 de 0,5216. Une telle relation est couramment exploitée en
+écologie et hydrologie pour évaluer les répercussions de la température
+sur les systèmes aquatiques (1). L'intervalle de confiance (bande grise)
 entourant la ligne de régression indique la fiabilité des prédictions
 obtenues pour divers degrés de température.
 
@@ -218,10 +218,10 @@ dispersion et densité. \label{fig:plot1}}
 
 \begin{figure}
 \centering
-\includegraphics[width=0.5\textwidth,height=0.26\textheight]{"C:/Users/ALEXIS/OneDrive/Bureau/Atelier2_ AlexisGabJust/projet-gab-alex-just/figure_1.png"}
+\includegraphics[width=0.51\textwidth,height=0.26\textheight]{"C:/Users/ALEXIS/OneDrive/Bureau/Atelier2_ AlexisGabJust/projet-gab-alex-just/figure_1.png"}
 \caption{Relation entre la vitesse moyenne du courant et la température
 moyenne du cours d'eau avec la position des taxons associés.
-\label{fig:plot1}}
+\label{fig:plot3}}
 \end{figure}
 
 \begin{figure}
@@ -229,7 +229,7 @@ moyenne du cours d'eau avec la position des taxons associés.
 \includegraphics[width=0.5\textwidth,height=0.26\textheight]{"C:/Users/ALEXIS/OneDrive/Bureau/Atelier2_ AlexisGabJust/projet-gab-alex-just/figure_2.png"}
 \caption{Relation entre la transparence de l'eau (élevée, moyenne et
 faible) et l'abondance totale des organismes benthiques .
-\label{fig:plot1}}
+\label{fig:plot2}}
 \end{figure}
 
 \hypertarget{Discussion}{%
@@ -242,11 +242,11 @@ rivières soit la profondeur (m), la largeur (m), la vitesse du courant
 (m/s) et la température de l'eau (°C). Nous souhaitions observer des
 corrélations entre ces différentes caractéristiques et l'abondance
 totale des organismes benthiques. Les corrélations significatives dans
-la figure 1 sont en accord avec les résultats retrouvés dans la
-littérature scientifique. En effet, des études antérieures montrent
-souvent une corrélation positive entre l'abondance du benthos et la
-température de l'eau qui peut affecter leur métabolisme, leur taux de
-croissance ainsi que leur reproduction (2, 3). Ces résultats nous
+la figure \ref{fig:plot1} sont en accord avec les résultats retrouvés
+dans la littérature scientifique. En effet, des études antérieures
+montrent souvent une corrélation positive entre l'abondance du benthos
+et la température de l'eau qui peut affecter leur métabolisme, leur taux
+de croissance ainsi que leur reproduction (2, 3). Ces résultats nous
 montrent que, bien que certaines relations entre les caractéristiques
 physiques des rivières et l'abondance benthique ne soient pas
 significatives, d'autres, telles que la température de l'eau, peuvent
